objects/ASI_CRM_Order_Form_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group_Code__c</fullName>
        <formula>IF( ASI_CRM_Order_Form__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Order_Form&quot;, ASI_CRM_Product_Name__r.ASI_MFM_Item_Group_Code__c, &quot;&quot;)</formula>
        <label>Item Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Form__c</fullName>
        <label>Order Form</label>
        <referenceTo>ASI_CRM_Order_Form__c</referenceTo>
        <relationshipLabel>Order Form Details</relationshipLabel>
        <relationshipName>Order_Form_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packaging__c</fullName>
        <formula>ASI_CRM_Product_Name__r.ASI_CRM_CN_pack__c</formula>
        <label>Packaging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Order Form Details</relationshipLabel>
        <relationshipName>Order_Form_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <formula>ASI_CRM_Product_Name__r.ASI_MFM_Sub_brand__r.Name</formula>
        <label>Sub-Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Price__c</fullName>
        <label>T1 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order Form Detail</label>
    <nameField>
        <displayFormat>OFD-{0000000}</displayFormat>
        <label>Order Form Detail No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Form Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Order_Form_Detail</fullName>
        <active>true</active>
        <label>CN Order Form Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>